--- a/GauntletEditor/Assets/Editor/StyleSheets/GauntletEditorMain.uss
+++ b/GauntletEditor/Assets/Editor/StyleSheets/GauntletEditorMain.uss
@@ -4,7 +4,7 @@
 {
     flex-direction : row;
     flex-grow : 1;
-    flex-shrink : 0.5;
+    flex-shrink : 0.8;
 }
 
 .menuButton {
@@ -12,4 +12,31 @@
     flex-grow: 0.5;
     flex-shrink: 0.5;
     min-height: 50px;
+}
+
+.menuButtonSelected {
+
+}
+
+.editor {
+    flex-grow : 1;
+    flex-shrink : 0.2;
+    border-radius : 3px;
+    border-color : rgb(255, 255, 255);
+}
+
+.levelEditor {
+
+}
+
+.header {
+    font-size : 20px;
+    align-self : center;
+    color : rgb(255, 216, 0);
+}
+
+.mainHeader {
+    font-size : 30px;
+    align-self : center;
+    color : rgb(255, 0, 0);
 }
