--- a/GauntletEditor/Assets/Editor/UXML Files/LevelEditor.uxml
+++ b/GauntletEditor/Assets/Editor/UXML Files/LevelEditor.uxml
@@ -2,7 +2,9 @@
 <UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="UnityEngine.UIElements" xmlns:uieed="UnityEditor.UIElements"
 xsi:noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" xsi:schemaLocation=" UnityEngine.UIElements ../../../UIElementsSchema/UnityEngine.UIElements.xsd
 UnityEditor.UIElements ../../../UIElementsSchema/UnityEditor.UIElements.xsd UnityEditor.PackageManager.UI ../../../UIElementsSchema/UnityEditor.PackageManager.UI.xsd">
-  <VisualElement class ="editor levelEditor">
-    <Label text="Level Map Editor" class ="header"/>
+  <VisualElement class ="editor">
+    <VisualElement class ="levelEditor">
+      <Label text="Level Map Editor" class ="header"/>
+    </VisualElement>
   </VisualElement>
 </UXML>
