Added IMGUI to projectile

--- a/GauntletEditor/Assets/Editor/StyleSheets/GauntletEditorMain.uss
+++ b/GauntletEditor/Assets/Editor/StyleSheets/GauntletEditorMain.uss
@@ -79,6 +79,8 @@
 .imguiContainer {
     flex-direction : row;
     margin : 10px;
+    min-height : 350px;
+    min-width : 1050px;
 }
 
 .rowData {
