corrected label not showing bug in spawn time range

--- a/GauntletEditor/Assets/Editor/UXML Files/SpawnFactoryEditor.uxml
+++ b/GauntletEditor/Assets/Editor/UXML Files/SpawnFactoryEditor.uxml
@@ -4,7 +4,7 @@ xsi:noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" xsi:sch
 UnityEditor.UIElements ../../../UIElementsSchema/UnityEditor.UIElements.xsd UnityEditor.PackageManager.UI ../../../UIElementsSchema/UnityEditor.PackageManager.UI.xsd">
   <VisualElement class ="assetData">
     <uieed:ObjectField name ="spawn_enemy" class ="objectField" allow-scene-objects="false" label="Spawn Enemy"/>
-    <MinMaxSlider name="spawn_time" min-value ="4" max-value ="10" low-limit="4" high-limit="40"/>
+    <MinMaxSlider name="spawn_time" min-value ="4" max-value ="10" low-limit="4" high-limit="40" label ="Spawn Time Range"/>
     <SliderInt label="Pool Count" binding-path="mPoolCount" name="pool_count" class ="rowData" low-value="4" high-value="30" value="4"/>    
     <uieed:ObjectField name ="spawn_sound" class ="objectField" allow-scene-objects="false" label="Spawn Sound"/>
     <uieed:ObjectField name ="item_1" class ="objectField" allow-scene-objects="false" label="Item 1"/>
