--- a/GauntletEditor/Assets/Editor/UXML Files/GameObjectEditor.uxml
+++ b/GauntletEditor/Assets/Editor/UXML Files/GameObjectEditor.uxml
@@ -9,6 +9,7 @@ UnityEditor.UIElements ../../../UIElementsSchema/UnityEditor.UIElements.xsd Unit
         <uieed:EnumField name="gobj_type" class="enumField" type ="" label="Game Object Type"/>
         <uieed:ObjectField name ="scriptable_gobj_field" allow-scene-objects="false" label ="Editable GameObject" class ="objectField"/>
         <TextField name="gobj_name" binding-path ="mName" label="Game Object Name" class ="rowData"/>
+        <Button name="gobj_create_new" text="Create New GameObject" class ="rowData"/>
       </VisualElement>
     </VisualElement>
   </VisualElement>
