Added serialization to game data

--- a/GauntletEditor/Assets/Editor/UXML Files/PlayerEditor.uxml
+++ b/GauntletEditor/Assets/Editor/UXML Files/PlayerEditor.uxml
@@ -8,7 +8,7 @@ UnityEditor.UIElements ../../../UIElementsSchema/UnityEditor.UIElements.xsd Unit
       <VisualElement class ="editorData" name ="player_editor_data">
         <TextField name ="player_name" binding-path="mName" class ="rowData" label ="Player Character Name" />
         <Slider label ="Move Speed" binding-path="mSpeed" name ="player_speed" class ="rowData" low-value="4" high-value="30" value="4"/>
-        <SliderInt label ="Health" binding-path="mHealth" name ="player_speed" class ="rowData" low-value="3" high-value="10" value="4"/>
+        <Slider label ="Health" binding-path="mHealth" name ="player_speed" class ="rowData" low-value="3" high-value="30" value="4"/>
         <uieed:ObjectField name ="player_projectile" class ="objectField" allow-scene-objects="false" label="Player Projectile"/>
         <uieed:ObjectField name ="player_spawn_sound" class ="objectField" allow-scene-objects="false" label="Player Spawn Sound"/>
         <uieed:ObjectField name ="player_attack_sound" class ="objectField" allow-scene-objects="false" label="Player Attack Sound"/>
